--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -48,7 +48,7 @@
         }
 
         .arrow {
-            background: url(../img/arrow-small.png) no-repeat center center;
+            background: url(../img/arrow-small.svg) no-repeat center center;
         }
     }
 
