--- a/sass/main.scss
+++ b/sass/main.scss
@@ -72,14 +72,15 @@ header {
   padding-top: 40px;
   padding-bottom: 300px;
   position: relative;
+  min-height: 100vh;
 
   .arrow {
     display: block;
-    background: url("../img/vector.png");
+    background: url("../img/vector.svg");
     width: 84px;
     height: 44px;
     position: absolute;
-    bottom: 55px;
+    bottom: 95px;
     left: calc(50% - 42px);
 
     &:hover {
@@ -231,7 +232,7 @@ h3.form-header {
       position: absolute;
       width: 15px;
       height: 15px;
-      background: url(../img/phone.png);
+      background: url(../img/phone.svg);
       left: -26px;
       top: 4px;
       background-repeat: no-repeat;
@@ -368,7 +369,10 @@ h3.form-header {
   padding-right: 0;
 }
 
-.cards .card {}
+.front, .back {
+ overflow: auto;
+ border-radius: 25px;
+}
 
 .row.slick,
 .row.slick2,
@@ -606,9 +610,11 @@ h3.form-header {
 .calc:before {
   background: url(../img/calc.png);
 }
-
+.containerr {
+  line-height: 1;
+}
 .pen:before {
-  background: url(../img/pen.png);
+  background: url(../img/pen.png) no-repeat;
 }
 
 .book:before {
@@ -823,7 +829,7 @@ button:hover {
 /* Create a custom checkbox */
 .checkmark {
   position: absolute;
-  top: 12px;
+  top: 8px;
   left: 30px;
   height: 19px;
   width: 19px;
@@ -846,11 +852,11 @@ button:hover {
   content: "";
   position: absolute;
   display: none;
-  background: url(../img/check.png) center center;
-  width: 16px;
+  background: url(../img/check.svg) center center;
+  width: 19px;
   height: 12px;
-  top: 0px;
-  left: 3px;
+  top: -1px;
+  left: 2px;
 }
 
 /* Show the checkmark when checked */
@@ -1082,15 +1088,15 @@ input[type="text"] {
 }
 
 .marker {
-  background: url(../img/marker.png) no-repeat;
+  background: url(../img/marker.svg) no-repeat;
 }
 
 .telephone {
-  background: url(../img/telephone.png) no-repeat;
+  background: url(../img/telephone.svg) no-repeat;
 }
 
 .letter {
-  background: url(../img/mail.png) no-repeat;
+  background: url(../img/mail.svg) no-repeat;
 }
 
 footer {
@@ -1149,7 +1155,9 @@ footer {
 .container-fluid {
   padding-right: 0;
 }
-
+.cards img {
+  width: 100% !important;
+}
 #modal-success {
   padding: 90px 80px;
   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.25);
