--- a/sass/main.scss
+++ b/sass/main.scss
@@ -70,13 +70,14 @@ header {
   background: url("../img/man-banner.png");
   background-size: cover;
   padding-top: 40px;
-  padding-bottom: 300px;
+  display: flex;
+  flex-direction: column;
   position: relative;
   min-height: 100vh;
 
   .arrow {
     display: block;
-    background: url("../img/vector.svg");
+    background: url("../img/Vector.svg");
     width: 84px;
     height: 44px;
     position: absolute;
@@ -202,11 +203,18 @@ h2 {
     font-size: 20px;
   }
 }
-
+.header-info {
+  height: 100%;
+}
+header .container {
+  height: calc(100vh - 40px);
+}
 h2.section-header {
   margin-bottom: 50px;
 }
-
+.header-info {
+  align-self: center;
+}
 h3.form-header {
   font-size: 24px;
   font-family: $default-font;
@@ -215,7 +223,7 @@ h3.form-header {
 
 // Start of Header
 .header-topLine {
-  margin-bottom: 180px;
+  // margin-bottom: 180px;
 }
 
 .phone-number {
@@ -381,6 +389,13 @@ h3.form-header {
   max-width: 80%;
   margin-left: auto;
   margin-right: auto;
+}
+.row.slick2,
+.row.slick3,
+.row.slick4 {
+  img {
+    border-radius: 25px;
+  }
 }
 
 .slick-prev,
