--- a/sass/main.scss
+++ b/sass/main.scss
@@ -287,10 +287,13 @@ h3.form-header {
 }
 
 
-
+.text-1 {
+  
+}
 .slick-list {
   @media screen and (min-width: 1600px){
     overflow: visible;
+
   }
   
 }
