--- a/sass/main.scss
+++ b/sass/main.scss
@@ -77,9 +77,9 @@ header {
 
   .arrow {
     display: block;
-    background: url("../img/Vector.svg");
-    width: 84px;
-    height: 44px;
+    background: url(../img/Vector.svg) no-repeat center;
+    width: 170px;
+    height: 120px;
     position: absolute;
     bottom: 95px;
     left: calc(50% - 42px);
