--- a/sass/main.scss
+++ b/sass/main.scss
@@ -48,7 +48,11 @@ body {
 .white-text {
   color: #fff;
 }
-
+#tabs-2, #tabs-1 {
+  @media screen and (max-width:321px) {
+    
+  }
+}
 .black-text {
   color: #333;
 }
@@ -83,6 +87,9 @@ header {
     position: absolute;
     bottom: 95px;
     left: calc(50% - 85px);
+    @media screen and (max-width:321px){
+      bottom: -20px !important;
+    }
 
     &:hover {
       cursor: pointer;
@@ -656,6 +663,10 @@ h3.form-header {
 
   h3 {
     margin-bottom: 42px;
+    font-size: 24px;
+    @media screen and (max-width: 576px) {
+      font-size: 20px;
+    }
   }
 
   li {
@@ -675,6 +686,10 @@ h3.form-header {
     top: 0;
     left: 0;
     white-space: nowrap;
+    @media screen and (max-width: 1500px) {
+      font-size: 14px;
+    }
+    
   }
 }
 
@@ -927,6 +942,7 @@ button:hover {
 }
 .tel.fixed {
   right: 50px;
+  z-index: 999999;
 }
 .fixed {
   display: block;
@@ -1092,6 +1108,14 @@ button:hover {
 
 .min-w {
   min-width: 33% !important;
+  @media screen and (min-width: 768px) {
+    &:nth-child(4) {
+      padding-left: 15%;
+    }
+    &:nth-child(5) {
+      padding-right: 15%;
+    }
+  }
 }
 
 .big-text {
@@ -1121,6 +1145,9 @@ button:hover {
 
   h2 {
     margin-top: 50px;
+    @media screen and (max-width:567px){
+      margin-top: 70px;
+    }
   }
 
   p {
@@ -1128,6 +1155,9 @@ button:hover {
     font-family: $default-font;
     margin-bottom: 60px;
     font-weight: 700;
+    @media screen and (max-width:567px){
+      margin-bottom: 25px;
+    }
   }
 
   img {
@@ -1142,6 +1172,7 @@ button:hover {
   color: $blue;
   text-transform: uppercase;
   line-height: 1;
+  display: inline-block;
 }
 
 .teacher-name {
@@ -1151,6 +1182,10 @@ button:hover {
   color: #000;
   text-transform: uppercase;
   line-height: 1;
+  display: inline-block;
+  @media screen and (max-width: 576px) {
+    text-transform: initial;
+  }
 }
 
 .license {
@@ -1209,6 +1244,7 @@ button:hover {
       height: 100%;
       border-top-right-radius: 25px;
       border-bottom-right-radius: 25px;
+      z-index: 1;
     }
   }
 }
